--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </section>
     <footer>
-        <p>©2021 Romila - <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a></p>
+        <div class="footer"><p>©2021 Romila <a href="http://www.freepik.com">Designed by slidesgo / Freepik</a></div></p>
     </footer>
 </body>
 </html>
